<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity"
    android:background="@drawable/map_opac_cut">

    <TextView
        android:id="@+id/alarm_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/icon_bell"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="45dp"
        android:fontFamily="@font/segoe_print_bold"
        android:gravity="center"
        android:text="@string/alarm_text"
        android:textColor="@color/red_icon_alarm"
        android:textSize="55sp" />

    <ImageButton
        android:id="@+id/icon_bell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_bell"
        android:onClick="callAddressScreen"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/icon" />

    <TextView
        android:id="@+id/location_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon_bell"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/segoe_print_bold"
        android:gravity="center"
        android:text="@string/location_text"
        android:textColor="@color/yellow_icon_location"
        android:textSize="50sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_text"
        android:layout_alignParentEnd="true"

        android:background="?android:attr/selectableItemBackground"
        android:text="@string/help_button"
        android:textColor="@color/black"
        android:onClick="callHelpScreen"
        android:textSize="75sp" />
</RelativeLayout>