<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/map_opac_cut_blue"
    tools:context=".screen.AddressActivity" >

    <ImageView
        android:id="@+id/icon_bell_address"
        android:layout_width="@dimen/size"
        android:layout_height="@dimen/size"
        android:layout_above="@id/address_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="103dp"
        app:srcCompat="@drawable/ic_peq"
        android:contentDescription="@string/icon" />

    <TextView
        android:id="@+id/address_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/address_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="11dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/tittle_address"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/address_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerVertical="true"
        android:background="@drawable/text_view_style"
        android:fontFamily="@font/roboto_black"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:focusable="false"
        android:hint="@string/search_location"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/address_text"
        android:background="@null" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ok_button_address"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:text="@string/ok_button"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:background="@drawable/ok_button_style"
        android:onClick="callMapScreen"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button_address"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:text="@string/cancel_button"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:background="@drawable/cancel_button_style"
        android:onClick="callCancelScreen"/>

</RelativeLayout>