<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/map_opac_cut_blue"
    tools:context=".screen.HelpActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/icon_bell_help"
        android:layout_width="@dimen/size"
        android:layout_height="@dimen/size"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_peq"
        android:contentDescription="@string/icon" />

    <TextView
        android:id="@+id/help_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_view_style"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/roboto_black"
        android:textSize="26sp"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:text="@string/help_text"
        android:layout_below="@id/icon_bell_help"
        android:textColor="@color/black"
        tools:ignore="ObsoleteLayoutParam" />

    <View
        android:id="@+id/divider_help"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/help_text"
        android:background="@null"
        tools:ignore="ObsoleteLayoutParam" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ok_button_cancel"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_help"
        android:layout_centerHorizontal="true"
        android:text="@string/ok_button"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:background="@drawable/ok_button_style"
        android:onClick="callMainScreen"
        tools:ignore="ObsoleteLayoutParam" />

</LinearLayout>